# testing

./: .gitignore  README.md  presentation.md  pyproject.toml
src/: app.py  language.py  service.py
tests/: test_app.py
